修改(flora-sanctum)@crush:重构 SecureRandomSource 叠加熵状态.
将单 long 累积器改为 256 位内部状态，每次调用混入 nanoTime 间隔、线程 id、
对象地址哈希、空闲堆差分、线程数、调用计数等多源正交抖动；移除无用的 XOR
死代码与死字段；时间戳以间隔差分参与，状态与计时字段原子/加锁保证线程安全.

💘 Generated with Crush

Co-Authored-By: Crush:hy3